--- a/src/app/components/discussion-detail/discussion-detail.component.html
+++ b/src/app/components/discussion-detail/discussion-detail.component.html
@@ -1,10 +1,12 @@
-
+<div class="discussion-details">
+  <h1 *ngIf="discussion$ | async as discussion">{{ discussion.title }}</h1>
+</div>
 <div class="comments-container">
     <div class="comments-list">
       <div *ngIf="(comments$ | async) as comments">
         <div *ngFor="let comment of comments">
           <p>{{ comment.text }}</p>
-          <small>Par {{ comment.userName }} le {{ comment.createdAt | date:'EEEE d MMMM y, HH:mm' }}</small>
+          <small>Par {{ comment.userName }}  {{ comment.createdAt | date:'EEEE d MMMM y, HH:mm' }}</small>
           <button class="btn-green-outline" *ngIf="comment.userName === currentUserFullName" (click)="deleteComment(comment.id!)">Supprimer</button>
           <hr class="comment-separator">
         </div>
