--- a/src/app/components/garden-form/garden-form.component.css
+++ b/src/app/components/garden-form/garden-form.component.css
@@ -126,6 +126,12 @@ input:-moz-autofill {
     padding-top: 100px;
     font-size: 20px;
 }
+.garden-list-empty {
+    text-align: center;
+    font-family: 'Nexalight', sans-serif;
+    margin: 0 0 100px;
+
+}
 
 @media (max-width: 768px) {
 .garden-list h2{
