--- a/src/app/components/garden-form/garden-form.component.html
+++ b/src/app/components/garden-form/garden-form.component.html
@@ -51,6 +51,11 @@
     </div>
     
   </ng-template>
+  <div class="modal-success" *ngIf="showModal">
+  <div class="modal-content">
+    <p>🌱 Jardin ajouté avec succès !</p>
+  </div>
+</div>
   
   
   
