--- a/src/app/pages/mentions-legales/mentions-legales.component.html
+++ b/src/app/pages/mentions-legales/mentions-legales.component.html
@@ -5,28 +5,24 @@
     <main>
         <section>
             <h2>Informations légales</h2>
-            <p><strong>Nom de l'entreprise :</strong> UrbanRoots SAS</p>
-            <p><strong>Forme juridique :</strong> Société par Actions Simplifiée (SAS)</p>
-            <p><strong>Adresse du siège social :</strong> 15 Rue des Jardins, 75003 Paris, France</p>
-            <p><strong>Capital social :</strong> 50 000 €</p>
-            <p><strong>Numéro de SIRET :</strong> 123 456 789 00012</p>
-            <p><strong>RCS :</strong> Paris B 123 456 789</p>
-            <p><strong>Numéro de TVA intracommunautaire :</strong> FR12 3456789000</p>
-            <p><strong>Directeur de la publication :</strong> Sophie Martin</p>
-            <p><strong>Contact :</strong> contact&#64;urbanroots.fr</p>
+            <p><strong>Nom du projet :</strong> UrbanRoots</p>
+            <p><strong>Responsable de la publication</strong> GHERRI Yesmine</p>
+            <p><strong>Statut :</strong> Développeuse we full stack</p>
+            <p><strong>Contact :</strong> gherri.yesmine&#64;gmail.com</p>
         </section>
         
         <section>
             <h2>Hébergement du site</h2>
             <p><strong>Hébergeur :</strong> Firebase Hosting</p>
-            <p><strong>Adresse de l'hébergeur :</strong> 2 Rue Kellermann, 59100 Roubaix, France</p>
-            <p><strong>Contact de l'hébergeur :</strong> support&#64;ovh.com | +33 9 72 10 10 07</p>
+            <p><strong>Adresse de l'hébergeur :</strong> 1600 Amphitheatre Parkway, Mountain View, CA 94043, USA</p>
+            <p><strong>Contact :</strong> <a href="https://firebase.google.com/support" target="_blank">Support Firebase</a></p>
         </section>
         
         <section>
             <h2>Propriété intellectuelle</h2>
             <p>
-                Tout le contenu du site <strong>UrbanRoots</strong> (textes, images, graphismes, logo, icônes,etc.) est la propriété exclusive de <strong>UrbanRoots SAS</strong> ou de ses partenaires, sauf mention contraire explicite. Toute reproduction, distribution, modification, adaptation, retransmission ou publication, même partielle, de ces différents éléments est strictement interdite sans l'accord exprès par écrit de <strong>UrbanRoots SAS</strong>.
+                  Les contenus de ce site (textes, images, logos, etc.) sont utilisés uniquement à des fins pédagogiques.
+      Toute reproduction à des fins commerciales est interdite sans autorisation écrite.
             </p>
         </section>
     </main>
