--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~leaflet/dist/leaflet.css";
 @font-face {
     font-family: 'Nexa bold';
-    src: url('../public/assets/fonts/Nexa-Heavy.ttf') format('truetype');
+    src: url('assets/fonts/Nexa-Heavy.ttf') format('truetype');
 }
 @font-face {
     font-family: 'Nexalight';
-    src: url('../public/assets/fonts/Nexa-ExtraLight.ttf') format('truetype');
+    src: url('assets/fonts/Nexa-ExtraLight.ttf') format('truetype');
+}
+
+.leaflet-container .leaflet-tile,
+.leaflet-container .leaflet-marker-icon,
+.leaflet-container .leaflet-marker-shadow,
+.leaflet-container .leaflet-pane > img,
+.leaflet-container .leaflet-tile-container > img,
+.leaflet-default-icon {
+  background-image: none !important;
+}
+
+.leaflet-container .leaflet-marker-icon {
+  background-image: url('assets/leaflet/images/marker-icon.png') !important;
+}
+.leaflet-container .leaflet-marker-shadow {
+  background-image: url('assets/leaflet/marker-shadow.png') !important;
+}
+
+.leaflet-container .leaflet-pane .leaflet-layer {
+  background-image: url('assets/leaflet/layers.png');
+}
+
+.leaflet-container .leaflet-pane .leaflet-layer-2x {
+  background-image: url('assets/leaflet/layers-2x.png');
 }
 body {
     margin: 0;
