--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,7 +6,6 @@
     font-family: 'Nexalight';
     src: url('../../public/assets/fonts/Nexa-ExtraLight.ttf') format('truetype');
 }
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 body {
     font-family: 'Nexalight', sans-serif;
     padding: 0;
@@ -21,7 +20,7 @@ body {
     width: 35%;
     padding: 20px;
     background-color: #F8F7F2;
-    margin: 100px auto;
+    margin: 80px auto;
     font-family: 'Nexalight', sans-serif;
 }
 
@@ -77,4 +76,10 @@ input:-moz-autofill {
 
 .btn-connexion {
     text-align: center;
+}
+@media (max-width: 768px) {
+.form-style {
+    width: 70%;
+    margin: 80px auto;
+}
 }
