--- a/src/app/components/discussion-create/discussion-create.component.css
+++ b/src/app/components/discussion-create/discussion-create.component.css
@@ -2,7 +2,7 @@
     width: 35%;
     padding: 20px;
     background-color: #85C484;
-    margin: 100px auto;
+    margin: 80px auto;
     font-family: 'Nexa bold', sans-serif;
     color: #fff;
     border-radius: 26px;
@@ -62,4 +62,10 @@ input:-moz-autofill {
 }
 .form-style h2 {
     text-align: center;
+}
+@media (max-width: 768px) {
+.form-style {
+    width: 70%;
+    margin: 80px auto;
+}
 }
