--- a/src/app/components/garden-form/garden-form.component.css
+++ b/src/app/components/garden-form/garden-form.component.css
@@ -132,6 +132,31 @@ input:-moz-autofill {
     margin: 0 0 100px;
 
 }
+.modal-success {
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #ffff;
+  color: black;
+  padding: 16px 32px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  z-index: 2000;
+  animation: fadeSlideDown 0.3s ease-in-out;
+}
+
+@keyframes fadeSlideDown {
+  from {
+    opacity: 0;
+    transform: translate(-50%, -10px);
+  }
+  to {
+    opacity: 1;
+    transform: translate(-50%, 0);
+  }
+}
+
 
 @media (max-width: 768px) {
 .garden-list h2{
@@ -160,5 +185,11 @@ input:-moz-autofill {
 }
 .form-style {
     width: 80%;
+}
+}
+@media (max-width: 768px) {
+.form-style {
+    width: 70%;
+    margin: 80px auto;
 }
 }
