--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -4,9 +4,10 @@
   border-radius: 20px;
 }
 
-google-map {
-  width: 1000px !important;
-  height: 500px !important;
+:host ::ng-deep .leaflet-container {
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .info-window {
